[package]
authors = ["samuel@dolt.ch"]
name = "linux_l6470"
version = "0.1.1"

description = "ST L6470 SPI driver for Embedded Linux"
readme = "README.md"

license = "MIT OR Apache-2.0"
categories = ["embedded"]
keywords = ["L6470", "stepper", "motor",  "embedded"]
maintenance = { status = "experimental"}
homepage = "https://bitbucket.org/doltch/linux-l6470-rs"
repository = "https://bitbucket.org/doltch/linux-l6470-rs"

exclude = [
 ".idea/*"
]

[dependencies]
spidev = "0.3"
sysfs_gpio = "0.5.3"
bitflags = "1.0"
byteorder = "1.2"


