[package]
authors = ["samuel@dolt.ch",
    "David Sawatzke <david@sawatzke.de>",
]
name = "l6470"
version = "0.1.0"
edition = "2018"
description = "ST L6470 embedded-hal driver"
readme = "README.md"


license = "MIT OR Apache-2.0"
categories = ["embedded"]
keywords = ["L6470", "stepper", "motor",  "embedded-hal"]
repository = "https://github.com/david-sawatzke/l6470-rs"

[dependencies]
bitflags = "1.0.0"
byteorder = { version = "1.3.0", default-features = false}
embedded-hal = "0.2.2"
nb = "0.1.0"
